--- a/src/main/resources/templates/watchlistItemForm.html
+++ b/src/main/resources/templates/watchlistItemForm.html
@@ -37,17 +37,29 @@
     <form action="#" method="post" th:action="@{/watchlistItemForm}" th:object="${watchlistItem}">
         <h2 class="mt-4">Submit an item</h2>
         <hr/>
+        <!-- Form levels error messages here -->
+        <div class="form-group row ">
+            <div class="col-sm-8">
+                <span class="text-danger" th:errors="*{global}"> </span>
+            </div>
+        </div>
         <div class="form-group row ">
             <label for="title" class="col-sm-2 col-form-label">Title</label>
             <div class="col-sm-4">
                 <input th:field="*{title}" type="text" class="form-control" placeholder="Mandatory">
+            </div>
+            <div class="col-sm-4">
+                <span class="text-danger" th:errors="*{title}"> </span>
             </div>
         </div>
 
         <div class="form-group row ">
             <label for="rating" class="col-sm-2 col-form-label mr-0">Rating</label>
             <div class="col-sm-4">
-                <input th:field="*{rating}" type="text" class="form-control" placeholder="5.0 < Number < 10.0">
+                <input th:field="*{rating}" type="text" class="form-control" placeholder="1.0 < Number < 10.0">
+            </div>
+            <div class="col-sm-4">
+                <span class="text-danger" th:errors="*{rating}"> </span>
             </div>
         </div>
 
@@ -56,12 +68,18 @@
             <div class="col-sm-4">
                 <input th:field="*{priority}" type="text" class="form-control" placeholder="Low|Medium|High">
             </div>
+            <div class="col-sm-4">
+                <span class="text-danger" th:errors="*{priority}"> </span>
+            </div>
         </div>
 
         <div class="form-group row">
             <label for="comments" class="col-sm-2 col-form-label">Comments</label>
             <div class="col-sm-4">
                 <textarea th:field="*{comment}" class="form-control" rows="3" placeholder="Max. 50 chars"></textarea>
+            </div>
+            <div class="col-sm-4">
+                <span class="text-danger" th:errors="*{comment}"> </span>
             </div>
         </div>
 
